# PFASST

./: .gitignore  CMakeLists.txt  Doxyfile
cmake/: site_config.hpp.in  toolchain_jureca.cmake
doc/source/: installing.md  scorep.md  supercomputers.md  todos.md
doc/source/concepts/: fft_workspace.hpp
examples/: CMakeLists.txt
examples/advec_diff/: CMakeLists.txt  advec_diff_mlsdc.cpp  advec_diff_pfasst.cpp  advec_diff_sdc.cpp  advec_diff_sweeper.hpp  advec_diff_sweeper_impl.hpp
examples/advection_diffusion/: Analysis AdvecDiff Scaling on Juqueen.ipynb  analysis.ipynb  fft_manager.hpp  fftw_workspace_dft1d.hpp  parse_mpi_log.py
examples/boris/: boris_mlsdc.cpp  boris_pfasst.cpp  boris_space_scale_analysis.ipynb  boris_sweeper.hpp  boris_sweeper_impl.hpp  injective_transfer.hpp  particle_cloud.hpp  particle_cloud_impl.hpp
examples/boris/bindings/: simple_physics_solver.cpp  simple_physics_solver.hpp  wrapper_simple_physics_solver.hpp  wrapper_simple_physics_solver_impl.hpp
examples/fftw_2d/: CMakeLists.txt  fftw_test.cpp
examples/heat1d/: CMakeLists.txt  heat1d_faulty_pfasst.cpp  heat1d_mlsdc.cpp  heat1d_pfasst.cpp  heat1d_sdc.cpp  heat1d_sweeper.hpp  heat1d_sweeper_impl.hpp
examples/heat2d/: CMakeLists.txt  heat2d_mlsdc.cpp  heat2d_pfasst.cpp  heat2d_sdc.cpp  heat2d_sweeper.hpp  heat2d_sweeper_impl.hpp
examples/heat3d/: CMakeLists.txt  heat3d_mlsdc.cpp  heat3d_pfasst.cpp  heat3d_sdc.cpp  heat3d_space_parallel_pfasst.cpp  heat3d_space_parallel_sweeper.hpp  heat3d_space_parallel_sweeper_impl.hpp  heat3d_sweeper.hpp  heat3d_sweeper_impl.hpp
include/: pfasst.hpp
include/pfasst/: config.hpp  globals.hpp  json_writer.hpp  logging.hpp  metalog.hpp  quadrature.hpp  util.hpp
include/pfasst/comm/: communicator.hpp  mpi_p2p.hpp
include/pfasst/contrib/: fft.hpp  fft_1d.hpp  fft_2d.hpp  spectral_1d.hpp  spectral_2d.hpp  spectral_transfer.hpp  spectral_transfer_1d.hpp  spectral_transfer_2d.hpp  spectral_transfer_3d.hpp
include/pfasst/controller/: controller.hpp  sdc.hpp  status.hpp  two_level_faulty_pfasst.hpp  two_level_mlsdc.hpp  two_level_pfasst.hpp
include/pfasst/encap/: eigen3_vector.hpp  encapsulation.hpp  traits.hpp  vector.hpp
include/pfasst/quadrature/: clenshaw_curtis.hpp  polynomial.hpp  quadrature.hpp
include/pfasst/sweeper/: imex.hpp  sweeper.hpp  traits.hpp
include/pfasst/transfer/: polynomial.hpp  spectral_1d.hpp  traits.hpp  transfer.hpp
src/pfasst/: config_impl.hpp  json_writer_impl.hpp
src/pfasst/comm/: communicator_impl.hpp  mpi_p2p_impl.hpp
src/pfasst/contrib/: fft_1d_impl.hpp  fft_2d_impl.hpp  fft_impl.hpp  spectral_1d_impl.hpp  spectral_2d_impl.hpp  spectral_transfer_1d_impl.hpp  spectral_transfer_2d_impl.hpp  spectral_transfer_3d_impl.hpp
src/pfasst/controller/: controller_impl.hpp  sdc_impl.hpp  status_impl.hpp  two_level_faulty_pfasst_impl.hpp  two_level_mlsdc_impl.hpp  two_level_pfasst_impl.hpp
src/pfasst/encap/: eigen3_vector_impl.hpp  encapsulation_impl.hpp  vector_impl.hpp
src/pfasst/quadrature/: clenshaw_curtis_impl.hpp  gauss_radau_impl.hpp  quadrature_impl.hpp
src/pfasst/sweeper/: imex_impl.hpp  sweeper_impl.hpp
src/pfasst/transfer/: polynomial_impl.hpp  spectral_1d_impl.hpp  transfer_impl.hpp
tests/: CMakeLists.txt  test_json.cpp  test_logging.cpp  test_utils.cpp
tests/comm/: CMakeLists.txt  test_mpi_p2p.cpp
tests/contrib/: CMakeLists.txt  test_fft_1d.cpp  test_fft_2d.cpp  test_fft_3d.cpp  test_spectral_1d.cpp  test_spectral_2d.cpp  test_spectral_3d.cpp
tests/controller/: CMakeLists.txt  mocks.hpp  test_controller.cpp  test_sdc.cpp  test_status.cpp  test_two_level_mlsdc.cpp
tests/encap/: CMakeLists.txt  test_encapsulation_eigen3_vector.cpp  test_encapsulation_vector.cpp  test_factory.cpp
tests/examples/: CMakeLists.txt
tests/examples/boris/: CMakeLists.txt  test_boris_sweeper.cpp  test_particle_cloud.cpp
tests/examples/heat1d/: CMakeLists.txt  test_heat1d_convergence.cpp  test_heat1d_sweeper.cpp
tests/examples/heat2d/: CMakeLists.txt  test_heat2d_convergence.cpp  test_heat2d_sweeper.cpp
tests/fixtures/: concepts.hpp  test_helpers.hpp
tests/quadrature/: CMakeLists.txt  test_quadrature.cpp
tests/sweeper/: CMakeLists.txt  mocks.hpp  test_imex.cpp  test_sweeper.cpp
tests/transfer/: CMakeLists.txt  mocks.hpp  test_polynomial_transfer.cpp  test_transfer.cpp
tools/: get_pfasst_version.py
tools/pfasst_py/: __init__.py  parse_log.py
